will make buttons for calculator and logic done.
co-author Ophelia Swen<ophelia.swen@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="container">
     <h1>Calculator</h1>
     <form id="add">
+      <h1>add</h1>
       <div class="form-group">
         <label for="add1">1st number:</label>
         <input id="add1" class="form-control" type="text">
@@ -19,10 +20,45 @@
         <label for="add2">2nd number:</label>
         <input id="add2" class="form-control" type="text">
       </div>
-      <button type="submit" class="btn">Add!</button>
-    </form>
-    <div id="output">
-      
+      <form id="subtract">
+        <h1>subtract</h1>
+        <div class="form-group">
+          <label for="sub1">1st number:</label>
+          <input id="sub1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="sub2">2nd number:</label>
+          <input id="sub2" class="form-control" type="text">
+        </div>
+        <form id="mulitply">
+          <h1>multiply</h1>
+          <div class="form-group">
+            <label for="mult1">1st number:</label>
+            <input id="mult1" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="mult2">2nd number:</label>
+            <input id="mult2" class="form-control" type="text">
+          </div>
+          <form id="divide">
+            <h1>divide</h1>
+            <div class="form-group">
+              <label for="div1">1st number:</label>
+              <input id="div1" class="form-control" type="text">
+            </div>
+            <div class="form-group">
+              <label for="div2">2nd number:</label>
+              <input id="div2" class="form-control" type="text">
+            </div>
+
+            <button type="add" class="btn">Add!</button>
+            <button type="subtract" class="btn">Subtract!</button>
+            <button type="multiply" class="btn">Mulitply!</button>
+            <button type="divide" class="btn">Divide!</button>
+
+     </form>
+     <div id="output">
+
     </div>
   </div>
 </body>
