trying to make the subtraction button to work
co-author Ophelia Swen<ophelia.swen@gmail.com>

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <label for="add2">2nd number:</label>
         <input id="add2" class="form-control" type="text">
       </div>
-      <form id="subtract">
+      <form id="sub">
         <h1>subtract</h1>
         <div class="form-group">
           <label for="sub1">1st number:</label>
@@ -56,9 +56,12 @@
             <button type="multiply" class="btn">Mulitply!</button>
             <button type="divide" class="btn">Divide!</button>
 
-     </form>
-     <div id="output">
+    </form>
+    <div class = "container">
+      <div id="output" style="font-weight: bolder; font-size: xx-large;">
 
+    </div>
+    
     </div>
   </div>
 </body>
